@@ -450,6 +450,7 @@ const AVCodecTag ff_codec_bmp_tags[] = {
     { AV_CODEC_ID_SPEEDHQ,      MKTAG('S', 'H', 'Q', '9') },
     { AV_CODEC_ID_FMVC,         MKTAG('F', 'M', 'V', 'C') },
     { AV_CODEC_ID_SCPR,         MKTAG('S', 'C', 'P', 'R') },
+    { AV_CODEC_ID_CLEARVIDEO,   MKTAG('U', 'C', 'O', 'D') },
 
     { AV_CODEC_ID_NONE,         0 }
 };
